--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,7 +21,7 @@ jobs:
             - name: 📂 Sync files
               uses: SamKirkland/FTP-Deploy-Action@4.0.0
               with:
-                  server: ftp.samkirkland.com
+                  server: ftp.themeiconic.com
                   username: ${{ secrets.ftp_username }}
                   password: ${{ secrets.ftp_password }}
                   server-dir: /public_html/react/
